resizes much better and animates when you punch it

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -37,25 +37,17 @@ html
                 span .edu
             .input-group
               input(type="text", required)
-              label Major
-              .glance
-            .input-group
-              input(type="text", required)
-              label Github Account
+              label Github
               .glance
               .pill-left
                 span @
             .input-group
-              input(type="text", required)
-              label Home State
-              .glance
-            .input-group
-              input(type="text", required)
-              label How did you hear about WildHacks?
-              .glance
-            .input-group
               input(type="text")
               label Team Name (if any)
+          .thanks
+            h2 That just happened.
+            img(src="images/fyeah.png")
+            h2 (You are welcome.)
       .submit-btn Punch it!
     
     // Google Analytics: change UA-XXXXX-X to be your site's ID. 
