animation fixes & generalization; font resizing

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -44,9 +44,13 @@ html
             .input-group
               input(type="text")
               label Team Name (if any)
+            .input-group
+              input(type="text", required)
+              label How did you hear about us?
+              .glance
           .thanks
             h2 That just happened.
-            img(src="images/fyeah.png")
+            img(src="images/fyeah.png", style="max-height: 250px")
             h2 (You are welcome.)
       .submit-btn Punch it!
     
