--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,7 +3,7 @@ html {
   height: 100%;
   margin: 0;
   font-family: marvel, "Helvetica Neue", helvetica, serif;
-  font-size: 25px;
+  font-size: 22px;
   overflow-x: hidden;
 }
 
@@ -43,6 +43,8 @@ hr {
 
 // formula
 
+$fieldHeight: 47px;
+
 .formula {
   display: block;
   margin: 0 auto;
@@ -72,7 +74,8 @@ hr {
 
     background: radial-gradient(circle, #f2f2f2 0%, #ebebeb 100%);
     transition: transform ease 0.5s,
-                margin-top ease 0.5s;
+                margin-top ease 0.5s,
+                max-height ease 0.5s 1.5s;
     
     margin-top: -215px;
     
@@ -97,7 +100,7 @@ hr {
   }
   
   .forcefield {
-    padding: 100px 30px;
+    padding: 100px 30px 60px 30px;
   }
   
   form {
@@ -114,9 +117,9 @@ hr {
     
     input {
       width: 90%; // will be overwritten.
-      max-height: 50px;
+      max-height: $fieldHeight;
       padding: 10px 5%; // will be overwritten.
-      font-size: 25px;
+      font-size: inherit;
       text-align: left;
       font-family: inherit;
       border-style: none;
@@ -157,7 +160,7 @@ hr {
     }
    
     .glance {
-      height: 50px;
+      height: $fieldHeight;
       width: 30px;
       background: #f4f4f4;
       box-shadow: 1px 0 1px rgba(0,0,0,0.1);
@@ -183,7 +186,7 @@ hr {
     }
     
     *[class*='pill-'] {
-      height: 50px;
+      height: $fieldHeight;
       text-align: center;
       top: 0;
       background: #fafafa;
@@ -226,7 +229,7 @@ hr {
     label {
       display: block;
       padding: 10px 0;
-      margin-top: -50px;
+      margin-top: -$fieldHeight;
       text-align: center;
       position: relative;
       top: 0px;
@@ -288,12 +291,17 @@ hr {
     .thanks {
       display: block;
       opacity: 1;
-      top: 100px;
-      font-size: 25px;
+      top: 95px;
     }
     
     .submit-btn {
       opacity: 0;
+    }
+    
+    &.end {
+      .primary-window {
+        max-height: 620px;
+      }
     }
   }
 }
@@ -303,5 +311,5 @@ hr {
   35% { transform: rotateX(180deg) translateY(0); }
   50% { transform: rotateX(180deg) translateY(80px); }
   65% { transform: rotateX(180deg) translateY(0); } 
-  100% { transform: rotateX(180deg) rotateZ(180deg); }
+  100% { transform: rotateX(180deg) rotateZ(180deg); max-height: 620px; }
 }
