--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -75,7 +75,8 @@ $fieldHeight: 47px;
     max-height: 100%;
     background: radial-gradient(circle, #f2f2f2 0%, #ebebeb 100%);
     transition: transform ease 0.5s,
-                margin-top ease 0.5s;
+                margin-top ease 0.5s,
+                max-height ease 0.5s;
     
     margin-top: -215px;
     
@@ -308,10 +309,20 @@ $fieldHeight: 47px;
   }
 }
 
-@keyframes punch-ticket {
+
+// FUKKKKKKiNG FIREFOX
+@-moz-keyframes punch-ticket {
   0% { transform: rotateX(0deg) translateY(0); }
   35% { transform: rotateX(180deg) translateY(0); }
   50% { transform: rotateX(180deg) translateY(80px); max-height: 620px; }
   65% { transform: rotateX(180deg) translateY(0); max-height: 620px; } 
   100% { transform: rotateX(180deg) rotateZ(180deg); max-height: 620px; }
+}
+
+@-webkit-keyframes punch-ticket {
+  0% { transform: rotateX(0deg) translateY(0); }
+  35% { transform: rotateX(180deg) translateY(0); }
+  50% { transform: rotateX(180deg) translateY(80px); }
+  65% { transform: rotateX(180deg) translateY(0); } 
+  100% { transform: rotateX(180deg) rotateZ(180deg); }
 }
