Win Chrome was having a weird margin problem.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -121,6 +121,7 @@ $fieldHeight: 47px;
       width: 90%; // will be overwritten.
       max-height: $fieldHeight;
       padding: 10px 5%; // will be overwritten.
+      margin: 0;
       font-size: inherit;
       text-align: left;
       font-family: inherit;
