added another firefox fix and cleaned a few things up

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -114,7 +114,7 @@ $fieldHeight: 47px;
     .input-group {
       margin-top: 70px;
       position: relative;
-      transition: opacity ease 0.5s;
+      transition: opacity ease 0.1s 0.325s;
     }
     
     input {
