use https, fix links, stop jshint from ruining build

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -16,7 +16,7 @@ html
     link(rel='stylesheet', href='styles/main.css')
     // endbuild
 
-    script(src="http://use.edgefonts.net/marvel:i4,n7,n4,i7:all.js")
+    script(src="https://use.edgefonts.net/marvel:i4,n7,n4,i7:all.js")
 
   body
 
@@ -35,7 +35,7 @@ html
               .glance
           .thanks
             h2 Yo, you just got logged in!
-            img(src="images/fyeah.png", style="max-height: 165px")
+            img(src="./images/fyeah.png", style="max-height: 165px")
       .submit-btn Punch it!
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
