--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,7 +15,7 @@ $fieldHeight: 45px;
   transition: all ease 1s;
 
   .header-img {
-    background-image: url('/images/epic-logo.png');
+    background-image: url('../images/epic-logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     width: 300px;
