Various improvments, box-sizing, more

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -16,12 +16,10 @@ html
     link(rel='stylesheet', href='styles/main.css')
     // endbuild
 
-    script(src="https://use.edgefonts.net/marvel:i4,n7,n4,i7:all.js")
-
   body
 
     .formula
-      .header-img
+      .header
       .primary-window
         .forcefield
           form
@@ -30,8 +28,23 @@ html
               label Username
               .glance
             .input-group
-              input(type="password", required)
-              label Password
+              input(type="email", required)
+              label School Email
+              .glance
+              .pill-right
+                span .edu
+            .input-group
+              input(type="text", required)
+              label Github
+              .glance
+              .pill-left
+                span @
+            .input-group
+              input(type="text")
+              label Team Name (if any)
+            .input-group
+              input(type="text", required)
+              label How did you hear about us?
               .glance
           .thanks
             h2 Yo, you just got logged in!
