--- a/app/styles/formula-inputs.scss
+++ b/app/styles/formula-inputs.scss
@@ -1,35 +1,31 @@
 .formula {
-  .input-group:first-child {
-    margin-top: 50px;
-  }
-
   .input-group {
-    margin-top: 70px;
+    margin-top: $input-group-margin-top;
+    height: $field-height;
     position: relative;
     transition: opacity ease 0.1s 0.325s;
   }
 
   input {
     width: 90%; // will be overwritten.
-    max-height: $fieldHeight;
+    max-height: $field-height;
     padding: 10px 5%; // will be overwritten.
     margin: 0;
     font-size: inherit;
     text-align: left;
     font-family: inherit;
+    font-weight: inherit;
     border: 1px solid rgba(0,0,0,0.1);
     border-radius: 2px;
-    //box-shadow: 2px 0 1px rgba(50,50,50,0.05),
-    //            -2px 0 1px rgba(50,50,50,0.05);
     transition: box-shadow ease 0.3s,
                 all ease 0.3s;
     text-overflow: ellipsis;
-    box-sizing: padding-box;
+    box-sizing: border-box;
 
     &:focus {
       outline: none;
-      box-shadow: -1px 1px 3px rgba(0,0,0,0.07),
-                   1px 1px 3px rgba(0,0,0,0.07);
+      box-shadow: -1px 1px 2px rgba(0,0,0,0.07),
+                   1px 1px 2px rgba(0,0,0,0.07);
       margin-bottom: 1px;
       margin-top: -1px;
       &~.glance {
@@ -38,14 +34,16 @@
       &~* {
         top: 0;
       }
-    }
 
-    &.focus {
       &~label {
         top: -55px;
         color: black;
         text-shadow: 0 0 1px 0px rgb(100,100,250);
       }
+    }
+
+    &.focus~label {
+      top: -55px;
     }
 
     &~* { transition: top ease 0.3s; }
@@ -57,10 +55,9 @@
   }
 
   .glance {
-    height: $fieldHeight + 2px;
+    height: $field-height - 2px;
     width: 30px;
     background: #f4f4f4;
-    box-shadow: 1px 0 1px rgba(0,0,0,0.1);
     padding: 0;
     margin: 0;
     top: 1px;
@@ -68,7 +65,6 @@
     position: absolute;
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
-    transition: all ease 0.5s;
 
     &::after {
       content: "\2713";
@@ -83,9 +79,9 @@
   }
 
   *[class*='pill-'] {
-    height: $fieldHeight + 2px;
+    height: $field-height - 2px;
     text-align: center;
-    top: 0;
+    top: 1px;
     background: #fafafa;
     border-radius: 2px;
     padding: 0 15px;
@@ -100,32 +96,27 @@
 
   .pill-right {
     right: 0;
-    box-shadow: -1px 0 1px rgba(0,0,0,0.1);
+    //box-shadow: -1px 0 1px rgba(0,0,0,0.1);
   }
 
   .pill-left {
     left: 0;
-    box-shadow: 1px 0 1px rgba(0,0,0,0.1);
+    //box-shadow: 1px 0 1px rgba(0,0,0,0.1);
   }
 
   .glance~.pill-left {
     left: 30px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-    box-shadow: 1px 0 1px rgba(0,0,0,0.1),
-                inset 1px 0 1px rgba(0,0,0,0.1);
-  }
-
-  .pill-left~.glance {
-    left: 100px;
+    //box-shadow: 1px 0 1px rgba(0,0,0,0.1),
+    //            inset 1px 0 1px rgba(0,0,0,0.1);
   }
 
   label {
     display: block;
-    padding: 10px 0;
-    margin-top: -$fieldHeight - 3px;
+    padding: $label-padding 0;
+    height: $label-height;
+    margin-top: -$field-height - 3px;
     text-align: center;
     position: relative;
     top: 0px;
@@ -134,5 +125,6 @@
                 color ease 0.5s 0.25s,
                 all ease 0.8s;
     color: #aaa;
+    box-sizing: border-box;
   }
 }
