--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,8 +4,6 @@
 
 // formula
 
-$fieldHeight: 45px;
-
 .formula {
   display: block;
   margin: 0 auto;
@@ -13,8 +11,11 @@ $fieldHeight: 45px;
   position: relative;
   max-width: 700px;
   transition: all ease 1s;
+  perspective: 300px;
+  perspective-origin: center center;
+  max-height: 100%;
 
-  .header-img {
+  .header {
     background-image: url('../images/epic-logo.png');
     background-size: contain;
     background-repeat: no-repeat;
@@ -34,14 +35,14 @@ $fieldHeight: 45px;
     max-height: 100%;
     background: radial-gradient(circle, #f2f2f2 0%, #ebebeb 100%);
     transition: transform ease 0.5s,
-                top ease-out 0.5s,
+                left ease 0.5s,
                 max-height ease 0.5s;
 
-    margin-top: -215px;
+    transform-style: preserve-3d;
 
-    transform-origin: 50% 50%;
     overflow: hidden;
-    top: 80px;
+    top: -150px;
+    left: 0;
 
     .thanks {
       position: absolute;
@@ -61,7 +62,7 @@ $fieldHeight: 45px;
   }
 
   .forcefield {
-    padding: 100px 30px 60px 30px;
+    padding: $ff-padding;
   }
 
   .submit-btn {
@@ -82,8 +83,8 @@ $fieldHeight: 45px;
 
   &.persp {
     .primary-window {
-      transform: rotateX(37deg);
-      top: 14px + 12*$numberInputs; // 3: 50; 4: 62; 5: 74
+      transform: rotateY(-3deg);
+      left: -40px;
       box-shadow: inset 0 30px rgba(0,0,0,0.015),
                   inset 0 25px rgba(0,0,0,0.02),
                   inset 0 10px rgba(0,0,0,0.025);
