Add next button and animate in prep for multipage

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -49,7 +49,8 @@ html
           .thanks
             h2 Yo, you just got logged in!
             img(src="./images/fyeah.png", style="max-height: 165px")
-      .submit-btn Punch it!
+      .next-btn
+        span Next
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
     //script.
