--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -81,6 +81,34 @@
                 opacity ease 0.1s;
   }
 
+  .next-btn {
+    position: absolute;
+    width: 50px;
+    height: $input-group-height * $number-inputs +
+            $ff-padding-top + $ff-padding-bottom;
+
+    right: 0;
+    top: $header-height / 2;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+
+    background: white;
+    z-index: -1;
+
+    transition: right ease 0.2s;
+    display: table;
+
+    cursor: pointer;
+
+    span {
+      display: table-cell;
+      vertical-align: middle;
+      transform-origin: center center;
+      right: 2px;
+      transform: rotate(-90deg);
+    }
+  }
+
   &.persp {
     .primary-window {
       transform: rotateY(-3deg);
@@ -88,6 +116,14 @@
       box-shadow: inset 0 30px rgba(0,0,0,0.015),
                   inset 0 25px rgba(0,0,0,0.02),
                   inset 0 10px rgba(0,0,0,0.025);
+    }
+
+    .next-btn {
+      right: -20px;
+
+      &:hover {
+        right: -25px;
+      }
     }
 
     .submit-btn {
