--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -34,7 +34,7 @@
     max-height 100%
     background radial-gradient(circle, #f2f2f2 0%, #ebebeb 100%)
     transition transform ease 0.5s,
-               top ease 0.5s,
+               left ease 0.5s,
                max-height ease 0.5s
 
     transform-style preserve-3d
@@ -60,52 +60,44 @@
   .forcefield
     padding ff-padding
 
-  btn-top = header-height / 2 + ff-padding-top + ff-padding-bottom + number-inputs * input-group-height - field-height
-
-  .submit-btn
-    height field-height
+  .next-btn
     position absolute
-    top btn-top
-    width 100%
-    padding 10px 0
-    text-align center
+    width 50px
+    height input-group-height * number-inputs + ff-padding-top + ff-padding-bottom
+
+    right 0
+    top (header-height / 2)px
+    border-top-right-radius 4px
+    border-bottom-right-radius 4px
+
     background white
-    border-bottom-left-radius 2px
-    border-bottom-right-radius 2px
     z-index -1
-    opacity 0
-    transform-origin bottom
-    transform rotateX(-35.9deg)
-    transition transform ease 0.3s,
-               top ease 0.4s,
-               box-shadow ease 0.6s,
-               opacity ease 0.1s 0.1s
-    box-sizing border-box
+
+    transition right ease 0.2s
+    display table
+
+    cursor pointer
+
+    span
+      display table-cell
+      vertical-align middle
+      transform-origin center center
+      right 2px
+      transform rotate(-90deg)
 
   &.persp
     .primary-window
-      transform rotateX(3deg)
-      top -170px
+      transform rotateY(-3deg)
+      left -40px
       box-shadow inset 0 30px rgba(0,0,0,0.015),
                  inset 0 25px rgba(0,0,0,0.02),
                  inset 0 10px rgba(0,0,0,0.025)
 
-    .submit-btn
-      left -3.5%
-      width 107%
-      top btn-top + field-height + 5px
-      transform-origin top
-      transform rotateX(-5deg)
-      opacity 1
+    .next-btn
+      right -20px
 
-      box-shadow 0 7px 15px rgba(0,0,0,0.2)
-
-      transition transform ease 0.3s,
-                 top ease 0.4s,
-                 box-shadow ease 0.6s,
-                 opacity ease 0.1s
-
-      cursor pointer
+      &:hover
+        right -25px
 
   &.punched
 
