--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -46,7 +46,7 @@
     &.page ~ .page
       top -1 * (input-group-height * number-inputs + ff-padding-top + ff-padding-bottom + header-height / 2)
 
-    &.page:last-child
+    &.page:first-child
       z-index 1
 
     .thanks
@@ -94,9 +94,13 @@
       transform rotate(-90deg)
 
   &.persp
+    form
+      // NOTE(jordan): Must do all overarching translates
+      // on form now, lest it overlap with next-btn
+      position relative
+      left -40px
     .primary-window
       transform rotateY(-3deg)
-      left -40px
       box-shadow inset 0 30px rgba(0,0,0,0.015),
                  inset 0 25px rgba(0,0,0,0.02),
                  inset 0 10px rgba(0,0,0,0.025)
