--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -21,7 +21,8 @@ html
     .formula
       .header
       .next-btn
-        span Next
+        .inner-btn
+          span Submit!
       form
         .primary-window.page.current
           .forcefield
@@ -37,45 +38,11 @@ html
                 span .edu
             .input-group
               input(type="text", required)
-              label Github
-              .glance
-              .pill-left
-                span @
-            .input-group
-              input(type="text", required)
-              label LinkedIn
-              .glance
-              .pill-left
-                span in/
-            .input-group
-              input(type="text", required)
               label How did you hear about our application?
               .glance
-        .primary-window.page
-          .forcefield
-            .input-group
-              input(type="text", required)
-              label Name
-              .glance
-            .input-group
-              input(type="email", required)
-              label School Email
-              .glance
-              .pill-right
-                span @u.northwestern.edu
-            .input-group
-              input(type="text", required)
-              label Github
-              .glance
-              .pill-left
-                span @
-            .input-group
-              input(type="text", required)
-              label How did you hear about us?
-              .glance
           .thanks
-            h2 Yo, you just got logged in!
-            img(src="./images/fyeah.png", style="max-height: 165px")
+            h3 Thanks! We'll let you know as soon as the app is ready  :D
+            img(src="./images/fyeah.png")
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
     //script.
