--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -4,6 +4,13 @@
 
 // formula
 
+next-btn-height = input-group-height * number-inputs + ff-padding-top + ff-padding-bottom
+
+form
+  position relative
+  transition all ease 0.5s
+  left 0
+
 .formula
   display block
   margin 0 auto
@@ -33,10 +40,9 @@
 
     max-height 100%
     background radial-gradient(circle, #f2f2f2 0%, #ebebeb 100%)
-    transition transform ease 0.5s,
-               left ease 0.5s,
-               max-height ease 0.5s
+    transition all ease 0.5s
 
+    transform-origin top center
     transform-style preserve-3d
 
     overflow hidden
@@ -52,12 +58,17 @@
     .thanks
       position absolute
       text-align center
+      padding-top 20px
       width 100%
       opacity 0
       transition all ease 1s 3s
-      margin-left -30px
       // firefox, you are a bitch.
       transform rotateY(180deg)
+
+      img
+        position relative
+        top 10px
+        height 300px
 
   &:focus
     box-shadow 0 0 5px rgba(0,0,0,0.25)
@@ -68,37 +79,40 @@
 
   .next-btn
     position absolute
-    width 50px
-    height:
-      input-group-height * number-inputs + ff-padding-top + ff-padding-bottom
+    height next-btn-height - 4px
 
+    top (header-height / 2)px + 2px
     right 0
-    top (header-height / 2)px
+
     border-top-right-radius 4px
     border-bottom-right-radius 4px
 
     background white
     z-index -1
 
-    transition right ease 0.2s,
-               box-shadow ease 0.2s
+    transition all ease 0.5s
     display table
+    transform rotateY(-4deg)
 
     cursor pointer
 
-    span
+    .inner-btn
       display table-cell
       vertical-align middle
-      transform-origin center center
-      right 2px
-      transform rotate(-90deg)
+
+      span
+        // NOTE(jordan): This width defines the width of all next-btn
+        width 50px
+        display block
+        transform-origin center center
+        right 2px
+        transform rotate(-90deg)
 
   &.persp
     form
       // NOTE(jordan): Must do all overarching translates
       // on form now, lest it overlap with next-btn
-      position relative
-      left -40px
+      left -30px
     .primary-window
       transform rotateY(-3deg)
       box-shadow inset 0 30px rgba(0,0,0,0.015),
@@ -106,28 +120,21 @@
                  inset 0 10px rgba(0,0,0,0.025)
 
     .next-btn
-      right -20px
-      box-shadow inset 11px 0 rgba(0,0,0,0.04),
-                 inset 12px 0 rgba(0,0,0,0.035),
-                 inset 13px 0 rgba(0,0,0,0.03),
-                 inset 14px 0 rgba(0,0,0,0.025),
-                 inset 15px 0 rgba(0,0,0,0.02),
-                 inset 16px 0 rgba(0,0,0,0.015)
+      height next-btn-height + 26px
+      top (header-height / 2)px - 13px
+      right -34px
+      transform rotateY(7deg)
 
       &:hover
-        right -25px
-        box-shadow inset 6px 0 rgba(0,0,0,0.04),
-                   inset 7px 0 rgba(0,0,0,0.035),
-                   inset 8px 0 rgba(0,0,0,0.03),
-                   inset 9px 0 rgba(0,0,0,0.025),
-                   inset 10px 0 rgba(0,0,0,0.02),
-                   inset 11px 0 rgba(0,0,0,0.015)
+        right -36px
 
   &.punched
 
     .primary-window
-      transform-origin  50% 0%
       animation 3s punch-ticket
+
+    .next-btn
+      display none
 
     .input-group
       opacity 0
@@ -143,7 +150,6 @@
     // because firefox is a bitch.
     &.end
       .primary-window
-        max-height 620px
         // this one's for IE 10...
         transition none
         transform rotateY(180deg)
@@ -158,45 +164,22 @@
     transform rotateX(180deg) translateY(0)
   50%
     transform rotateX(180deg) translateY(80px)
-    max-height 620px
   65%
     transform rotateX(180deg) translateY(0)
-    max-height 620px
   100%
     transform rotateX(180deg) rotateZ(180deg)
-    max-height 620px
 
 @keyframes punch-ticket
-   0%
-    transform rotateX(0deg) translateY(0)
-  35%
-    transform rotateX(-180deg) translateY(0)
-    height 620px
-   50%
-    transform rotateX(-180deg) translateY(80px)
-    height 620px
-  65%
-    transform rotateX(-180deg) translateY(0)
-    height 620px
-  100%
-    transform rotateX(-180deg) rotateZ(180deg)
-    height 620px
-
-@-webkit-keyframes punch-ticket
   0%
     transform rotateX(0deg) translateY(0)
   35%
     transform rotateX(-180deg) translateY(0)
-    height 620px
   50%
     transform rotateX(-180deg) translateY(80px)
-    height 620px
   65%
     transform rotateX(-180deg) translateY(0)
-    height 620px
   100%
     transform rotateX(-180deg) rotateZ(180deg)
-    height 620px
 
 @-ms-keyframes punch-ticket
   0%
