Serialization and form data submission

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -37,7 +37,7 @@ html
               .pill-right
                 span .edu
             .input-group
-              input(type="text", required)
+              input#hearsay(type="text", required)
               label How did you hear about our application?
               .glance
           .thanks
