Add mobile warning

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -17,7 +17,14 @@ html
     // endbuild
 
   body
-
+    .mobile-warning
+      h2 Hey! It looks like you're using a mobile phone, which is awesome.
+      h2 But we spent a lot of time making this application look juuuust right for desktop, and it'll probably be a little squishy on your phone.
+      h2 (But it should still work!)
+      h2 If that's OK with you,&nbsp;
+        a(href='#', do='close-warning') tap here
+        | .
+      h2 Otherwise, come back on your computer later, ok? ;)
     .formula
       .header
       .next-btn
