--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -18,6 +18,9 @@ next-btn-height = input-group-height * number-inputs + ff-padding-top + ff-paddi
   h2
     padding 0 30px
 
+iframe[name*='dupe-frame']
+  display none
+
 @media all and (max-width: 700px)
   .mobile-warning
     display block
