Fix title, add analytics, fix safari

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -2,8 +2,8 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    title 3d Form -- Jordan T
-    meta(name='description', content='3d Form Test Concept')
+    title EPIC Application Signup
+    meta(name='description', content='Sign up to be notified when the official EPIC Application goes live!')
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
     // vendor.css is currently empty
@@ -53,13 +53,13 @@ html
             img(src="./images/fyeah.png")
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
-    //script.
+    script.
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='//www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
+      ga('create','UA-43952603-4');ga('send','pageview');
 
     // vendor.js is currently empty
     // build:js scripts/vendor.js
