--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -56,6 +56,9 @@ form
     margin 0 auto
     z-index 2
     position relative
+    // safari
+    transform none
+    -webkit-transform translateZ(0)
 
   .primary-window
     border-radius 4px
@@ -67,7 +70,6 @@ form
     transition all ease 0.5s
 
     transform-origin top center
-    transform-style preserve-3d
 
     overflow hidden
     top -150px
@@ -116,7 +118,7 @@ form
 
     transition all ease 0.5s
     display table
-    transform rotateY(-4deg)
+    transform rotateY(-4deg) translateZ(-8px)
 
     cursor pointer
 
@@ -138,16 +140,16 @@ form
       // on form now, lest it overlap with next-btn
       left -30px
     .primary-window
-      transform rotateY(-3deg)
+      transform rotateY(-3deg) translateZ(-8px)
       box-shadow inset 0 30px rgba(0,0,0,0.015),
                  inset 0 25px rgba(0,0,0,0.02),
                  inset 0 10px rgba(0,0,0,0.025)
 
     .next-btn
-      height next-btn-height + 26px
-      top (header-height / 2)px - 13px
+      height next-btn-height + 25px
+      top (header-height / 2)px - 12px
       right -34px
-      transform rotateY(7deg)
+      transform rotateY(7deg) translateZ(-8px)
 
       &:hover
         right -36px
