Fix mobile warning message

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -18,13 +18,13 @@ html
 
   body
     .mobile-warning
-      h2 Hey! It looks like you're using a mobile phone, which is awesome.
-      h2 But we spent a lot of time making this application look juuuust right for desktop, and it'll probably be a little squishy on your phone.
-      h2 (But it should still work!)
-      h2 If that's OK with you,&nbsp;
+      p Hey! It looks like you're using a mobile phone, which is awesome.
+      p But we spent a lot of time making this application look juuuust right for desktop, and it'll probably be a little squishy on your phone.
+      p (But it should still work!)
+      p If that's OK with you, you really want the squishy, less exciting version, then&nbsp;
         a(href='#', do='close-warning') tap here
         | .
-      h2 Otherwise, come back on your computer later, ok? ;)
+      p Otherwise, come back on your computer later, ok? ;)
     iframe(name='dupe-frame')
     .formula
       .header
