--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -7,7 +7,7 @@
 next-btn-height = input-group-height * number-inputs + ff-padding-top + ff-padding-bottom
 
 .mobile-warning
-  position absolute
+  position fixed
   z-index 9999
   margin 20px 10%
   width 80%
@@ -15,8 +15,9 @@ next-btn-height = input-group-height * number-inputs + ff-padding-top + ff-paddi
   display none
   border-radius 4px
   box-shadow 0 0 10px 10px rgba(0,0,0,0.1)
-  h2
+  p
     padding 0 30px
+    font-size 18px
 
 iframe[name*='dupe-frame']
   display none
